# stemstudio

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: checks.yml
backend/: __init__.py
backend/adapters/: __init__.py  ffmpeg.py  separator.py  youtube.py
backend/api/: dependencies.py  file_errors.py  main.py
backend/core/: binaries.py  config.py  constants.py  imports.py  stems.py  worker_health.py
backend/db/: models.py  session.py
backend/desktop/: __init__.py  api_server.py  audio_separator_cli.py  worker.py  yt_dlp_cli.py
backend/schemas/: exports.py  imports.py  settings.py  storage.py  system.py  tracks.py  validation.py
backend/services/: __init__.py  diagnostics.py  exports.py  imports.py  metrics.py  mixing.py  processing.py  settings.py  storage.py  tracks.py
backend/workers/: processor.py  runner.py
desktop/: electron-builder.config.cjs  package.json
desktop/src/: main.js  preload.cjs
docs/: design-principles.md  karaoke-video-plan.md  release.md
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  (+12 more)
scripts/: build-desktop-mac.sh  build-desktop-runtime.sh  check-system.sh  desktop-doctor.sh  python-common.sh  require-macos-signing-env.sh  run-python.sh  setup-local.sh  setup-processing.sh  setup-python.sh  verify-desktop-mac.sh
(+34 files in other folders)
